plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id "io.freefair.lombok"
    id "io.freefair.git-version"
}

group = 'de.grefer-hosting'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

bootJar {
    launchScript()
}

dependencies {
    implementation platform('org.joinfaces:joinfaces-platform:5.5.6')

    implementation 'org.joinfaces:faces-spring-boot-starter'
    implementation 'org.primefaces:primefaces::jakarta'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'commons-codec:commons-codec'

    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'com.h2database:h2'
}

test {
    useJUnitPlatform()
    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
}
